# articleviz

./: .gitignore  LICENSE  README.md  docker-compose.yml  plan.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  models.py
backend/app/routes/: articles.py  process.py  settings.py  upload.py
backend/app/services/: llm.py  llm_settings.py  normalizer.py  parsers.py  visualizer.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/article/[id]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/settings/: ApiKeyForm.tsx
frontend/src/components/ui/: ColorModeToggle.tsx  FontToggle.tsx  MotionToggle.tsx
frontend/src/components/upload/: InputTabs.tsx  UploadArea.tsx
frontend/src/components/viewer/: ArticleViewer.tsx  ConceptFlowNode.tsx  DiagramView.tsx  GlossaryTerm.tsx  SectionCard.tsx
frontend/src/contexts/: PreferencesContext.tsx
frontend/src/lib/: api.ts
openspec/: config.yaml
openspec/changes/phase-1-foundation/: design.md  proposal.md  tasks.md
openspec/changes/phase-1-foundation/specs/infrastructure/: spec.md
openspec/changes/phase-2-ingestion/: design.md  proposal.md  tasks.md
openspec/changes/phase-3-llm/: design.md  proposal.md  tasks.md
openspec/changes/phase-4-analysis/: design.md  proposal.md  tasks.md
openspec/changes/phase-5-viewer/: design.md  proposal.md  tasks.md
openspec/changes/phase-6-accessibility/: design.md  proposal.md  tasks.md
(+5 files in other folders)
