[project]
name = "articleviz-backend"
version = "0.1.0"
description = "ArticleViz backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.17",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.13.0",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "openai>=1.30.0",
    "anthropic>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
